applications/app-000001/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-000001
  namespace: alpine

spec:
  selector:
    app: app-000001

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
