applications/app-000001/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-000001
  namespace: alpine

spec:
  ingressClassName: nginx

  rules:
  - host: app-000001.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: app-000001

            port:
              number: 80
